--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,7 @@ border-radius: 4px;
 position: absolute;
 top: 50%;
 left: 50%;
-transform: translate(-50%, 50%) scale(1);
+transform: translate(-50%, -50%) scale(1);
 transition: transform 300ms linear;
 }
 
@@ -336,6 +336,7 @@ width: 100%;
 }
 
 .work-label-text {
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-align: center;
